zarf-101/Kubernetes_Objects/Ingress/miniproject_solution/catchall_service/ing-catchall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-catchall-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      function: catchall
  template:
    metadata:
      labels:
        app: nginx
        function: catchall
    spec:
      containers:
      - name: nginx
        image: nginx:1.22.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
      volumes:
      - name: index
        configMap:
          name: nginx-catchall
