zarf-101/Kubernetes_Objects/Ingress/miniproject_solution/catchall_service/ing-catchall-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    function: catchall
  name: svc-nginx-catchall
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    function: catchall
