zarf-101/Kubernetes_Objects/Ingress/miniproject_solution/catchall_service/ing-rules-catchall.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-catchall
  annotations:
spec:
  ingressClassName: haproxy
  defaultBackend:
    service:
      name: svc-nginx-catchall
      port:
        number: 80
